--- a/New Playlist/css/style.css
+++ b/New Playlist/css/style.css
@@ -93,18 +93,44 @@
         right: 48.76%;
         top: calc(50% - 22.09px/2 + 219.98px);
     }
-    form.form__search {
+    input.input__search, input.col-xl-2 {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-self: center;
-    }
-    input.input__search {
+        align-items: center;
+        position: absolute;
+        top: 25px;
+        left: 100px;
         width: 418px;
         height: 37px;
         font-weight: bold;
         color: rgba(31, 32, 65, 0.25);
         background: #fff;
         border-radius: 33px;
+    }
+    input.input__playlist-name {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        width: 292px;
+        height: 30px;
+        left: 430px;
+        top: 109px;
+        
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 38px;
+        line-height: 46px;
+        background-color: #000;
+        color: #FFFFFF;
+        border: 1px solid #fff;
+        border-top: 0px;
+        border-left: 0px;
+        border-right: 0px;
+        padding-bottom: 10px;
+        padding-top: 10px;
     }
  }
