--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,9 @@
         right: 48.76%;
         top: calc(50% - 22.09px/2 + 219.98px);
     }
+    p.button__show-more::after {
+        content: url(https://cdn.discordapp.com/attachments/713453989517066250/716031399882260500/arrow_down1.png);
+    }
     input.input__search, input.col-xl-2 {
         position: absolute;
         padding: 12px 20px 12px 40px;
