--- a/css/new-playlist.css
+++ b/css/new-playlist.css
@@ -9,10 +9,12 @@
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { 
+    /* Comienzo "New Playlist"*/
     body.body {
         color: #fff;
         background-color: #000;
     }
+    /* Header */
     div.main__header {
         display: flex;
         flex-direction: row;
@@ -33,7 +35,7 @@
         font-size: 32px;
         line-height: 40px;
     }
-    h1.header__user {
+    h1.header__user, .col-xl-auto {
         display: flex;
         justify-content: flex-end;
         font-family: Montserrat;
@@ -48,6 +50,57 @@
     h1.header__title::before {
         content: url(https://cdn.discordapp.com/attachments/713453989517066250/716024824106844291/logo_header_blanco.png);
     }
+    /* Fin Header */
+    /* Footer */
+    div.main__footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 30px;
+    }
+    p#footer__border {
+        position: absolute;
+        bottom: 40px;
+        border: 1px solid rgba(101, 101, 101, 0.33);
+        color: #000;
+        border-bottom: 0px;
+        border-left: 0px;
+        border-right: 0px;
+    }
+    footer {
+        border: 1px solid #fff;
+        border-bottom: 0px;
+        border-left: 0px;
+        border-right: 0px;
+        border-color: rgba(101, 101, 101, 0.33);
+    }
+    h1.footer__designed-in {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 24px;
+        position: absolute;
+        bottom: 30px;
+    }
+    h1.footer__powered-by {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 24px;
+        position: absolute;
+        bottom: 30px;
+        right: 40px;
+    }
+    h1.footer__powered-by::after {
+        padding-left: 15px;
+        content: url(https://cdn.discordapp.com/attachments/712706917365186570/716040727544725504/spotify_logo3.png);
+        border-top: 1px solid rgba(101, 101, 101, 0.33);
+        padding-top: 18px;
+    }
+    /* Fin Footer */
+    /* Tabla */
     table.main-table, table.col-xl-9 {        
         position: absolute;
         display: flex;
@@ -70,29 +123,13 @@
     table, td, tr {
         padding-left: 75px;
     }
-    tr.second-tr {
-        background: #282828;
-        border-radius: 10px solid red;
-    }
-    tr.fourth-tr {
+    tr.second-tr, tr.fourth-tr {
         background: #282828;
     }
     td.first-tr {
         padding-bottom: 15px;
     }
-    td.second-tr {
-        padding-top: 15px;
-        padding-bottom: 15px;
-    }
-    td.third-tr {
-        padding-top: 15px;
-        padding-bottom: 15px;
-    }
-    td.fourth-tr {
-        padding-top: 15px;
-        padding-bottom: 15px;
-    }
-    td.fifth-tr {
+    td.second-tr, td.third-tr, td.fourth-tr, td.fifth-tr  {
         padding-top: 15px;
         padding-bottom: 15px;
     }
@@ -118,6 +155,8 @@
         justify-content: center;
         color: #fff;
     }
+    /* Fin Tabla */
+    /* Show More */
     p.button__show-more {
         display: flex;
         flex-direction: column;
@@ -131,6 +170,8 @@
     p.button__show-more::after {
         content: url(https://cdn.discordapp.com/attachments/713453989517066250/716031399882260500/arrow_down1.png);
     }
+    /* Fin Show More*/
+    /* Form: buscar playlist */
     input.input__search, input.col-xl-2 {
         position: absolute;
         padding: 12px 20px 12px 40px;
@@ -139,11 +180,13 @@
         width: 418px;
         height: 45px;
         font-weight: bold;
-        color: rgba(31, 32, 65, 0.25);
+        color: #000;
         background: #fff;
         border-radius: 33px;
         resize: none;
     }
+    /* Fin Form: buscar playlist */
+    /* Form: Nombre de la playlist */
     input.input__playlist-name {
         position: absolute;
         width: 330px;
@@ -164,4 +207,6 @@
         border-right: 0px;
         padding-bottom: 10px;
     }
+    /* Form: Fin nombre de la playlist */
+    /* Fin "New Playlist" */
  }
