--- a/css/search-playlist.css
+++ b/css/search-playlist.css
@@ -8,4 +8,13 @@
 @media (min-width: 992px) {  }
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { }
+@media (min-width: 1200px) { 
+    .col-xl-8{
+        
+    }
+    div>.search__music-img , .col-xl-8{
+        display: flex;
+        flex-direction: row;
+        repeat: no-repeat;
+    }
+}
