--- a/css/login.css
+++ b/css/login.css
@@ -8,4 +8,100 @@
 @media (min-width: 992px) {  }
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { }
+@media (min-width: 1200px) { 
+    /* Form Login */
+
+div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;    
+}
+div>h1{
+    justify-content: center;
+    align-items: center;
+    width: 279px;
+    height: 16px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+}
+div>h1.form__login-top{   
+    left: 451px;
+    top: 117px;  
+    color: #000000;
+}
+div>h1.form__login-bottom{
+    left: 437px;
+    top: 384px;
+    color: #1ED760;
+}
+.form__login-username{
+    width: 527px;
+    height: 57px;
+    left: 313px;
+    top: 170px;
+    color: #777;
+    background: #FFFFFF;
+/* Dark 25% */
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    box-sizing: border-box;
+    border-radius: 33px;
+}
+.form__login-pasword{
+    width: 527px;
+    height: 57px;
+    left: 313px;
+    top: 237px;
+    background: #FFFFFF;
+    color: #777;
+/* Dark 25% */
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    box-sizing: border-box;
+    border-radius: 33px;
+}
+.form__login-button-login{
+    width: 204px;
+    height: 38px;
+    left: 636px;
+    top: 319px;
+    font-weight: bold;
+    color: #FFFFFF;
+    background: #1ED760;
+    border-radius: 42px;
+}
+.form__login-line{
+    width: 527px;
+    height: 0px;
+    left: 313px;
+    top: 445px;
+    border: 1px solid rgba(101, 101, 101, 0.33);
+}
+.form__login-line-button{
+    width: 185px;
+    height: 16px;
+    left: 484px;
+    top: 484px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+    color: #000000;
+}
+.form__login-register-button{
+    width: 204px;
+    height: 38px;
+    left: 470px;
+    top: 824px;
+    font-weight: bold;
+    background: #FFFFFF;
+    border: 2px solid #000000;
+    box-sizing: border-box;
+    border-radius: 42px;
+}
+
+/* End Form Login */
+}
