--- a/css/register.css
+++ b/css/register.css
@@ -8,4 +8,175 @@
 @media (min-width: 992px) {  }
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { }
+@media (min-width: 1200px) { 
+    /* Form Register */
+
+    div{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;    
+    }
+    div>h1{
+        justify-content: center;
+        align-items: center;
+        width: 279px;
+        height: 16px;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 22px;
+    }
+.form__register-top{
+    width: 342px;
+    height: 16px;
+    left: 405px;
+    top: 118px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+    color: #000000;
+}
+.form__register-email{
+    width: 527px;
+    height: 57px;
+    left: 313px;
+    top: 170px;
+    color: grey;
+    background: #FFFFFF;
+/* Dark 25% */
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    box-sizing: border-box;
+    border-radius: 33px;
+}
+.form__register-confirm-email{
+    width: 527px;
+    height: 57px;
+    left: 313px;
+    top: 242px;
+    color: grey;
+    background: #FFFFFF;
+/* Dark 25% */
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    box-sizing: border-box;
+    border-radius: 33px;
+}
+.form__register-pasword{
+    width: 527px;
+    height: 57px;
+    left: 313px;
+    top: 314px;
+    color: grey;
+    background: #FFFFFF;
+/* Dark 25% */
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    box-sizing: border-box;
+    border-radius: 33px;
+}
+.form__register-username{
+    width: 527px;
+    height: 57px;
+    left: 312px;
+    top: 387px;
+    color: grey;
+    background: #FFFFFF;
+/* Dark 25% */
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    box-sizing: border-box;
+    border-radius: 33px;
+}
+.form__register-bootom{
+    width: 176px;
+    height: 18px;
+    left: 316px;
+    top: 466px;
+    color: grey;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    text-transform: uppercase;
+    color: rgba(31, 32, 65, 0.25);
+}
+.form__register-day{
+    width: 90px;
+    height: 56.43px;
+    left: 316px;
+    top: 490px;
+    color: grey;
+    background: #FFFFFF;
+/* Dark 25% */
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    box-sizing: border-box;
+    border-radius: 50px;
+}
+.form__register-month{
+    width: 211px;
+    height: 56.43px;
+    left: 431px;
+    top: 490.44px;
+    color: grey;
+    background: #FFFFFF;
+/* Dark 25% */
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    box-sizing: border-box;
+    border-radius: 50px;
+}
+.form__register-age{
+    width: 173px;
+    height: 56.43px;
+    left: 666px;
+    top: 490.44px;
+    color: grey;
+    background: #FFFFFF;
+/* Dark 25% */
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    box-sizing: border-box;
+    border-radius: 50px;
+}
+.form__register-button{
+    width: 191px;
+    height: 38px;
+    left: 480px;
+    top: 647px;
+    color: #FFFFFF;
+    font-weight: bold;
+    background: #1ED760;
+    border-radius: 42px;
+}
+.form__register-line{
+    width: 527px;
+    height: 0px;
+    left: 313px;
+    top: 738px;
+    border: 1px solid rgba(101, 101, 101, 0.33);
+}
+.form__register-line-bottom{
+    width: 185px;
+    height: 16px;
+    left: 484px;
+    top: 782px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+    color: #000000;
+}
+.form__register-login{
+    width: 204px;
+    height: 38px;
+    left: 470px;
+    top: 824px;
+    font-weight: bold;
+    background: #FFFFFF;
+    border: 2px solid #000000;
+    box-sizing: border-box;
+    border-radius: 42px;
+}
+/* End Form Register */
+}
