casi terminado el home

--- a/css/home.css
+++ b/css/home.css
@@ -8,4 +8,157 @@
 @media (min-width: 992px) {  }
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {  }
+@media (min-width: 1200px) {  
+    body.body {
+        color: #fff;
+        background-color: #000;
+    }
+        /* Header */
+        div.main__header {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            padding: 30px;
+        }
+        header {
+            border: 1px solid #fff;
+            border-top: 0px;
+            border-left: 0px;
+            border-right: 0px;
+            border-color: rgba(101, 101, 101, 0.33);
+        }
+        h1.header__title, .col-xl-auto {
+            font-family: Righteous;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 32px;
+            line-height: 40px;
+        }
+        h1.header__register, .col-xl-auto {
+            font-family: Montserrat;
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 20px;
+            line-height: 24px;
+            width: 87px;
+            height: 30px;
+            padding-top: 15px;
+            position: absolute;
+            right: 300px;
+        }
+        h1.header__login, .col-xl-auto {
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 20px;
+            line-height: 24px;
+            padding-top: 15px;
+        }
+        h1.header__title::before {
+            content: url(https://cdn.discordapp.com/attachments/713453989517066250/716024824106844291/logo_header_blanco.png);
+        }
+        /* Fin Header */
+        /* Footer */
+        div.main__footer {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            padding: 30px;
+        }
+        p#footer__border {
+            position: absolute;
+            bottom: 40px;
+            border: 1px solid rgba(101, 101, 101, 0.33);
+            color: #000;
+            border-bottom: 0px;
+            border-left: 0px;
+            border-right: 0px;
+        }
+        h1.footer__designed-in {
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 20px;
+            line-height: 24px;
+            position: absolute;
+            bottom: 30px;
+        }
+        h1.footer__powered-by {
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 20px;
+            line-height: 24px;
+            position: absolute;
+            bottom: 30px;
+            right: 40px;
+        }
+        h1.footer__powered-by::after {
+            padding-left: 15px;
+            content: url(https://cdn.discordapp.com/attachments/712706917365186570/716040727544725504/spotify_logo3.png);
+            border-top: 1px solid rgba(101, 101, 101, 0.33);
+            padding-top: 18px;
+        }
+        /* Fin Footer */
+        div.home__background-image {
+            position: relative;
+            height: 600px;
+            width: 1600px;
+            background-image: url(../img/fondo-home.jpg);
+            background-repeat: no-repeat;
+        }
+        div.home__background-image::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background: #000;
+            opacity: 0.5;
+        }
+    h1.main__home-title {
+        display: flex;
+        justify-content: center;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 50px;
+        line-height: 61px;
+        padding-top: 80px;
+    }
+    input.input__search {
+        background: #FFFFFF;
+        border: 1px solid rgba(31, 32, 65, 0.25);
+        box-sizing: border-box;
+        border-radius: 33px;
+        width: 738px;
+        height: 57px;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 22px;
+        line-height: 24px;
+        position: absolute;
+        left: 433px;
+        top: 310px;
+        color: rgba(31, 32, 65, 0.25);
+    }
+    input.input__button {
+        position: absolute;
+        width: 348px;
+        height: 57px;
+        left: 633px;
+        top: 450px;
+        background: #1ED760;
+        border-radius: 42px;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 22px;
+        line-height: 27px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+    }
+}
