--- a/css/search-playlist.css
+++ b/css/search-playlist.css
@@ -9,14 +9,7 @@
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { 
-    .container{
-        flex-direction: row;
-        flex-wrap: nowrap;
-    }
-    .search__music-img{
-        width: 100px;
-        height: 100px;
-    }
+
         /* Header */
         div.main__header {
             display: flex;
@@ -54,4 +47,38 @@
             content: url(https://cdn.discordapp.com/attachments/713453989517066250/716024824106844291/logo_header_blanco.png);
         }
         /* End Header */
+
+        /* Search Playlist */
+        .container{
+            flex-direction: row;
+            flex-wrap: nowrap;
+        }
+        .search__music-img{
+            width: 100px;
+            height: 100px;
+            margin: 20px;
+            padding: 5px;
+        }
+        .search__secion-browser{
+            width: 753px;
+            height: 43px;
+            left: 65px;
+            top: 125px;
+            background: #FFFFFF;
+            /* Dark 25% */
+            border: 1px solid rgba(31, 32, 65, 0.25);
+            box-sizing: border-box;
+            border-radius: 33px;
+        }
+        .search__secion-button{
+            width: 213px;
+            height: 43px;
+            left: 889px;
+            top: 125px;
+            font-weight: bold;
+            color: #FFFFFF;
+            background: #1ED760;
+            border-radius: 42px;
+        }
+        /* End Search Playlist */
 }
