--- a/css/home.css
+++ b/css/home.css
@@ -20,6 +20,11 @@
             justify-content: space-between;
             padding: 30px;
         }
+        div>a {
+            display: block;
+            color: #FFFFFF;
+            font-weight: bold;
+        }
         header {
             border: 1px solid #fff;
             border-top: 0px;
@@ -35,7 +40,6 @@
             line-height: 40px;
         }
         h1.header__register, .col-xl-auto {
-            font-family: Montserrat;
             font-family: Montserrat;
             font-style: normal;
             font-weight: normal;
