--- a/css/home.css
+++ b/css/home.css
@@ -32,14 +32,14 @@
             border-right: 0px;
             border-color: rgba(101, 101, 101, 0.33);
         }
-        h1.header__title, .col-xl-auto {
+        h1.header__title {
             font-family: Righteous;
             font-style: normal;
             font-weight: normal;
             font-size: 32px;
             line-height: 40px;
         }
-        h1.header__register, .col-xl-auto {
+        h1.header__register {
             font-family: Montserrat;
             font-style: normal;
             font-weight: normal;
