--- a/css/edit-playlist.css
+++ b/css/edit-playlist.css
@@ -33,6 +33,7 @@
             font-weight: normal;
             font-size: 32px;
             line-height: 40px;
+            text-decoration: black;
         }
         h1.header__user, .col-xl-auto {
             display: flex;
