home casi terminado

--- a/css/edit-playlist.css
+++ b/css/edit-playlist.css
@@ -1,5 +1,8 @@
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {  }
+        body.body {
+            background-color: black;
+        }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {  }
@@ -33,7 +36,6 @@
             font-weight: normal;
             font-size: 32px;
             line-height: 40px;
-            text-decoration: black;
         }
         h1.header__user, .col-xl-auto {
             display: flex;
