--- a/css/home.css
+++ b/css/home.css
@@ -74,9 +74,10 @@
             justify-content: space-between;
             padding: 30px;
         }
-        .footer__border {
-            position: absolute;
-            bottom: 40px;
+        div.footer__border {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
             border: 1px solid #777;
         }
         h1.footer__designed-in {
