--- a/css/new-playlist.css
+++ b/css/new-playlist.css
@@ -67,13 +67,6 @@
         border-left: 0px;
         border-right: 0px;
     }
-    footer {
-        border: 1px solid #fff;
-        border-bottom: 0px;
-        border-left: 0px;
-        border-right: 0px;
-        border-color: rgba(101, 101, 101, 0.33);
-    }
     h1.footer__designed-in {
         font-family: Montserrat;
         font-style: normal;
@@ -171,12 +164,16 @@
         content: url(https://cdn.discordapp.com/attachments/713453989517066250/716031399882260500/arrow_down1.png);
     }
     /* Fin Show More*/
+    /* Form */
+    div.new-playlist__input {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 15px;
+    }
     /* Form: buscar playlist */
     input.input__search, input.col-xl-2 {
-        position: absolute;
         padding: 12px 20px 12px 40px;
-        top: 210px;
-        left: 570px;
         width: 418px;
         height: 45px;
         font-weight: bold;
@@ -188,12 +185,8 @@
     /* Fin Form: buscar playlist */
     /* Form: Nombre de la playlist */
     input.input__playlist-name {
-        position: absolute;
         width: 330px;
         height: 40px;
-        left: 615px;
-        top: 150px;
-        
         font-family: Montserrat;
         font-style: normal;
         font-weight: 800;
