--- a/css/home.css
+++ b/css/home.css
@@ -70,7 +70,6 @@
         /* Footer */
         div.main__footer {
             display: flex;
-            flex-direction: row;
             justify-content: space-between;
             padding: 30px;
         }
@@ -146,5 +145,9 @@
         line-height: 27px;
         text-transform: uppercase;
         color: #FFFFFF;
+    }
+    .footer__border{
+        width: 100%;
+        position: absolute;
     }
 }
