--- a/css/login.css
+++ b/css/login.css
@@ -9,8 +9,18 @@
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { 
-    /* Form Login */
-
+/* Form Login */
+header {
+    border: 1px solid #fff;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-color: rgba(101, 101, 101, 0.33);
+}
+.header__title {
+    color: #000;
+    text-decoration: none;
+}
 div{
     display: flex;
     flex-direction: column;
