--- a/css/register.css
+++ b/css/register.css
@@ -10,7 +10,17 @@
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { 
     /* Form Register */
-
+    header {
+        border: 1px solid #fff;
+        border-top: 0px;
+        border-left: 0px;
+        border-right: 0px;
+        border-color: rgba(101, 101, 101, 0.33);
+    }
+    .header__title {
+        color: #000;
+        text-decoration: none;
+    }
     div{
         display: flex;
         flex-direction: column;
@@ -96,6 +106,7 @@
     left: 316px;
     top: 466px;
     color: grey;
+    font-weight: bold;
     font-size: 14px;
     line-height: 17px;
     text-transform: uppercase;
@@ -174,5 +185,46 @@
     box-sizing: border-box;
     border-radius: 42px;
 }
+/* footer*/
+div.main__footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 30px;
+}
+p#footer__border {
+    position: absolute;
+    bottom: 40px;
+    border: 1px solid rgba(101, 101, 101, 0.33);
+    color: #fff;
+    border-bottom: 0px;
+    border-left: 0px;
+    border-right: 0px;
+}
+h1.footer__designed-in {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+    position: absolute;
+    bottom: 30px;
+}
+h1.footer__powered-by {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+    position: absolute;
+    bottom: 30px;
+    right: 40px;
+}
+h1.footer__powered-by::after {
+    padding-left: 15px;
+    content: url(https://cdn.discordapp.com/attachments/712706917365186570/716040727544725504/spotify_logo3.png);
+    border-top: 1px solid rgba(101, 101, 101, 0.33);
+    padding-top: 18px;
+/* End Footer */
 /* End Form Register */
 }
