arregle las img del search y edite css

--- a/css/login.css
+++ b/css/login.css
@@ -43,7 +43,7 @@ div>h1.form__login-top{
     justify-content: center;
     color: #000000;
 }
-div>h1.form__login-bottom{
+h1.form__login-bootom{
     left: 437px;
     top: 384px;
     color: #1ED760;
