--- a/css/edit-playlist.css
+++ b/css/edit-playlist.css
@@ -34,6 +34,7 @@
             font-weight: normal;
             font-size: 32px;
             line-height: 40px;
+            color: #fff;
         }
         h1.header__user, .col-xl-auto {
             display: flex;
