--- a/css/register.css
+++ b/css/register.css
@@ -211,6 +211,7 @@ h1.footer__designed-in {
     bottom: 30px;
 }
 h1.footer__powered-by {
+    color: #000;
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
