--- a/css/search-playlist.css
+++ b/css/search-playlist.css
@@ -57,6 +57,11 @@
             content: url(https://cdn.discordapp.com/attachments/713453989517066250/716024824106844291/logo_header_blanco.png);
         }
         /* End Header */
+        div>.search-playlist {
+            display: flex;
+            justify-content: center;
+            position: absolute;
+        }
         .container{
             flex-direction: row;
             flex-wrap: nowrap;
@@ -88,5 +93,47 @@
             background: #1ED760;
             border-radius: 42px;
         }
+        /* Footer */
+        div.main__footer {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            padding: 30px;
+        }
+        p#footer__border {
+            position: absolute;
+            bottom: 40px;
+            border: 1px solid rgba(101, 101, 101, 0.33);
+            color: #000;
+            border-bottom: 0px;
+            border-left: 0px;
+            border-right: 0px;
+        }
+        h1.footer__designed-in {
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 20px;
+            line-height: 24px;
+            position: absolute;
+            bottom: 30px;
+        }
+        h1.footer__powered-by {
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 20px;
+            line-height: 24px;
+            position: absolute;
+            bottom: 30px;
+            right: 40px;
+        }
+        h1.footer__powered-by::after {
+            padding-left: 15px;
+            content: url(https://cdn.discordapp.com/attachments/712706917365186570/716040727544725504/spotify_logo3.png);
+            border-top: 1px solid rgba(101, 101, 101, 0.33);
+            padding-top: 18px;
+        }
+        /* End Footer */
         /* End Search Playlist */
 }
