--- a/css/search-playlist.css
+++ b/css/search-playlist.css
@@ -14,6 +14,9 @@
         body {
             background-color: #000;
         }
+        h3 {
+            font-size: 16px;
+        }
         h1,h3 {
             color: #FFF;
         }
@@ -60,14 +63,19 @@
         div>.search-playlist {
             display: flex;
             justify-content: center;
-            position: absolute;
+        }
+        div>.search__music-img{
         }
         div>.row {
             justify-content: space-between;
         }
         .container{
+            justify-content: space-evenly;
             flex-direction: row;
             flex-wrap: nowrap;
+        }
+        .search__music-img-hover:hover{
+            color: rgb(115, 206, 115);
         }
         p.search__music-img {
             font-family: Montserrat;
