--- a/css/login.css
+++ b/css/login.css
@@ -3,6 +3,10 @@
     body{
         background-color: #000;
     }
+    h1{
+        display: flex;
+        justify-content: center;
+    }
     .header__title {
         color: #FFF;
         text-decoration: none;
@@ -10,10 +14,16 @@
     .login__box {
         flex-direction: column;
         background-color: #FFF;
-        margin: 15% 9px;
+        margin: 10% 9px;
         display: flex;
         justify-content: center;
         font-size: 15px;
+    }
+    form{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        margin: 0 10%;
     }
 }
 
