no me acuerdo que cambie

--- a/css/search-playlist.css
+++ b/css/search-playlist.css
@@ -62,6 +62,11 @@
             justify-content: center;
             position: absolute;
         }
+        div>.input__search-playlist {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
         div>.row {
             justify-content: space-between;
         }
