--- a/css/register.css
+++ b/css/register.css
@@ -1,5 +1,60 @@
 /* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {  }
+@media (min-width: 576px) {  
+    body{
+        background-color: #000;
+    }
+    .header__title{
+        display: flex;
+        justify-content: center;
+        color: #FFF;
+    }
+    .register__box{
+        flex-direction: column;
+        background-color: #FFF;
+        margin: 15% 9px 8% 9px;
+        display: flex;
+        justify-content: center;
+        border-radius: 5px;
+    }
+    .form__register-top{
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 22px;
+    }
+    div>form{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .form__register-email,.form__register-confirm-email,.form__register-pasword,.form__register-username{
+        height: 57px;
+        border: 1px solid rgba(31, 32, 65, 0.25);
+        box-sizing: border-box;
+        border-radius: 33px;
+    }
+    .form__register-bootom{
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 17px;
+        text-transform: uppercase;
+        color: rgba(31, 32, 65, 0.25)
+    }
+    
+    .form___register-primer-secion{
+        margin: 0 10%;
+    }
+    .form__register-second-secion{
+        flex-direction: row;
+    }
+    footer{
+        color: #FFF;
+        font-size: 1px;
+    }
+}
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {  }
@@ -10,6 +65,9 @@
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { 
     /* Form Register */
+    body{
+        background-color: #FFF;
+    }
     header {
         border: 1px solid #fff;
         border-top: 0px;
@@ -20,6 +78,9 @@
     .header__title {
         color: #000;
         text-decoration: none;
+    }
+    .register__box{
+        margin: 0 0;
     }
     div{
         display: flex;
